--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ header h1{
 header h2{
   color: #fff;
   font-size: 20px;
+  line-height: 20px;
   margin: 16px 10px;
   font-weight: normal;
 } 
@@ -40,6 +41,7 @@ ul{
   display: flex;
   margin: 20px 10px;
   padding: 0;
+  align-items: center;
 }
 ul li{
   list-style: none;
@@ -91,13 +93,9 @@ ul li a:hover{
   display: flex;
   justify-content: center;
   padding: 80px 0 20px;
-  font-size: 24px;
+  font-size: 30px;
   letter-spacing: .05em;
   opacity: .8;
-}
-#time{
-  font-size: 24px;
-  font-family: 'Ibarra Real Nova', serif;
 }
 #more,
 #restart{
@@ -112,7 +110,7 @@ ul li a:hover{
   display: flex;
   justify-content: center;
   padding-top: 25px;
-  font-size: 24px;
+  font-size: 30px;
   letter-spacing: .05em;
   color: rgb(202, 87, 67);
   opacity: .8;
@@ -131,7 +129,7 @@ ul li a:hover{
   align-items: flex-end;
   font-family: 'Xanh Mono', monospace;
   color:rgb(72, 121, 99);
-  opacity: .8;
+  opacity: .9;
 }
 #accuracy{
   left: 50%;
