--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ header h2{
 } 
 ul{
   display: flex;
-  margin: 20px 10px;
+  margin: 20px 8px 20px 0;
   padding: 0;
   align-items: center;
 }
@@ -77,7 +77,7 @@ ul li a:hover{
   opacity: 0.9;
   height: calc(100% - 70px - 50px);
   min-height: 400px;
-  width: 99%;
+  width: 97%;
   border-radius: 8px;
   margin: 0 auto;
   text-align: center;
@@ -91,7 +91,6 @@ ul li a:hover{
   align-items: center;
 }
 #container{
-  overflow: hidden;
   width: 100%;
   visibility:hidden;
 }
@@ -102,15 +101,22 @@ ul li a:hover{
   margin: 0 auto;
   height: 20px;
   width: 100%;
+  border-radius: 999px;
+  display: flex;
+  justify-content: center;
+}
+#timer.hidden{
+  display: none;
 }
 .timer{
   background-color: rgb(72, 121, 99);
   box-shadow:inset 4px 4px 6px black;
-  opacity: .8;
-  margin: 0 auto;
+  opacity: .9;
+  margin: auto;
   height: 20px;
   width: 100px;
-  border-radius: 9999px;
+  border-radius: 10px;
+  will-change: transform, width, height ;
 }
 @keyframes timerBifore{
   0%{
@@ -128,22 +134,22 @@ ul li a:hover{
 }
 @keyframes timerAfter{
   0%{
-    transform: scaleX(1);
+    transform: scale(1,1);
   }
-  80%{
-    transform: scale(0.2,.9);
-  }
-  90%{
-    transform: scale(0.1,.8);
+  97%{
+    width: 20px;
+    height: 20px;
   }
   100%{
-    transform: scale(0,0);
+    width: 0px;
+    height: 0px;
   }
 }
 #typed,
 #untype{
   overflow-wrap: break-word;
   width: 100%;
+  height: 65px;
   color: black;
   font-family: 'Ibarra Real Nova', serif;
   font-size: 55px;
@@ -151,13 +157,23 @@ ul li a:hover{
   display: inline;
   opacity: 1;
 }
-#untype.flash{
-  animation: flash 2s linear infinite;
+#untype.score{
+  height: 85px;
+  font-size: 73px;
+  font-family: 'Xanh Mono', monospace;
+}
+#untype.score::before{
+  content: "score";
+  font-size: 40px;
+}
+#untype.score::after{
+  content: "pt";
+  font-size: 40px;
 }
 #goodtype{
   display: flex;
   justify-content: center;
-  padding: 0 0 20px;
+  padding: 10px 0 20px;
   font-size: 30px;
   letter-spacing: .05em;
   opacity: .8;
@@ -262,7 +278,7 @@ ul li a:hover{
   background-color: rgb(72, 121, 99);
   color: #fff;
   text-shadow: 1px 1px 2px black;
-  z-index: -1;
+  z-index: -2;
   position: absolute;
   opacity: .8;
   transition: transform 1.2s;
@@ -274,14 +290,13 @@ ul li a:hover{
 .balloon:hover{
   z-index: 1;
 }
-.balloon.explosion{
+.explosion{
   animation: bubble 1s ease-out;
   pointer-events: none;
 }
-.balloon.explosion.disabled{
+.explosion.disabled{
   display: none;
 }
-
 @keyframes bubble{
   0%{
     box-shadow: 0 0 3px 2px rgba(255,255,255,0),
@@ -306,6 +321,44 @@ ul li a:hover{
     0 0 2px 5px rgba(255,255,255,1) inset,
     0 0 2px 5px rgba(255,255,255,1),
     0 0 2px 5px rgba(0,0,0,1);
+  }
+}
+.bonus::before{
+  content: "bonus!";
+  position: absolute;
+  top: -25%;
+  left: 0;
+  right: 0;
+  text-align: center;
+  font-size: 0.8em;
+}
+.bonus{
+  font-size: 16px;
+  position: absolute;
+  font-family: 'Ibarra Real Nova', serif;
+  text-align: center;
+  border-radius: 50%;
+  color: #fff;
+  box-shadow:inset 2px 2px 5px black;
+  /* inset -5px -5px 20px 5px rgba(0,0,0,.5); */
+  text-shadow: inset 1px 1px 2px black;
+  z-index: -1;
+}
+@keyframes up{
+  0%{
+    transform: scale(0),translate(0);
+  }
+  0.3%{
+    transform: scale(1.1,1.1);
+  }
+  0.6%{
+    transform: scale(.9,.9);
+  }
+  0.9%{
+    transform: scale(1,1),translateX(30px);
+  }
+  100%{
+    transform: translateY(-200px);
   }
 }
 
@@ -389,9 +442,12 @@ footer{
   .normal_menu{
    display: none;
   }
+  #balloonroom{
+    width: 99%;
+  }
   #hambarger{
     display: block;
-    margin: 18px 10px 0 0;
+    margin: 18px 16px 0 0;
     color: #fff;
     font-size: 30px;
     cursor: pointer;
@@ -404,4 +460,11 @@ footer{
     pointer-events: none;
   }
 }
+
+/* fullscreen */
+/* @media(min-width: 800px){
+  #balloonroom{
+    width: 96%;
+  }
+} */
 
